# pipegate

./: .gitmodules  README.md  benchmark-analysis.md  funding.json  notes.md  x402.md
core/client/: CHANGELOG.md  README.md  benchmark.md  bun.lockb  index.ts  package-lock.json  package.json  tsconfig.json
core/client/abi/: ChannelFactory.json
core/client/src/: client.ts  index.ts  paymentChannel.ts
core/client/src/abi/: channel-factory.ts  channelFactory.ts  paymentChannel.ts
core/client/src/constants/: address.ts
core/client/src/tests/: index.ts
core/client/src/types/: index.ts
core/client/src/utils/: index.ts
core/client/src/wasm/: pipegate.d.ts  pipegate.js  pipegate_bg.wasm  pipegate_bg.wasm.d.ts
core/client/src/wasm/cjs/: pipegate.d.ts  pipegate.js
core/client/tests/: index.ts  stream.ts  wasm.ts
core/contract/: README.md
core/contract/src/: ChannelFactory.sol  MinimalProxy.sol  PaymentChannel.sol
core/contract/test/: PaymentChannel.t.sol
core/rust/: CHANGELOG.md  Cargo.toml  README.md
core/rust/src/: error.rs  lib.rs  main.rs  wasm.rs
core/rust/src/abi/: ChannelFactory.json  PaymentChannel.json
core/rust/src/middleware/: mod.rs  state.rs  types.rs  utils.rs
core/rust/src/middleware/one_time_payment/: mod.rs  state.rs  types.rs  utils.rs  verify.rs
core/rust/src/middleware/payment_channel/: channel.rs  mod.rs  utils.rs  verify.rs
core/rust/src/middleware/stream_payment/: listener.rs  mod.rs  state.rs  types.rs  utils.rs  (+1 more)
core/rust/test/: index.ts  package.json
core/server/: CHANGELOG.md  Cargo.toml  README.md
core/server/src/: channel.rs  error.rs  extractors.rs  lib.rs  main.rs  middleware.rs  utils.rs  verify.rs  wasm.rs
core/server/src/abi/: CFAv1Forwarder.json  ChannelFactory.json  PaymentChannel.json
core/server/src/benchmark/: benchmark_results.csv  mod.rs
core/server/src/benchmark/onetime/: benchmark_results.csv
core/server/src/benchmark/streams/: benchmark_results.csv
core/server/src/middleware/: mod.rs
core/server/src/middleware/one_time_payment/: mod.rs  utils.rs  verify.rs
core/server/src/middleware/payment_channel/: channel.rs  extractors.rs  mod.rs  types.rs  utils.rs  verify.rs
core/server/src/middleware/stream_payment/: listener.rs  mod.rs  types.rs  utils.rs  verify.rs
core/server/src/types/: channel.rs  mod.rs  tx.rs
core/server/src/utils/: headers.rs  helpers.rs  mod.rs  rate_limiter.rs
core/server/test/: bun.lockb
core/ts/: CHANGELOG.md  README.md  bun.lockb  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
core/ts/src/: client.ts  index.ts
core/ts/src/abi/: channelFactory.ts  paymentChannel.ts
core/ts/src/constants/: address.ts
core/ts/src/types/: index.ts
core/ts/src/wasm/: pipegate.d.ts  pipegate.js  pipegate_bg.wasm
core/ts/tests/: index.ts  interceptors.ts
example/: .env  README.md  abi.ts  constants.ts  create_payment_channel.sh  getPaymentChannelInfo.ts  package-lock.json  package.json  payment.json  payment_channel.sh
example/abi/: abi.ts
example/aws/s3-proxy-router/: .gitignore  Cargo.toml
example/aws/s3-proxy-router/src/: errors.rs  main.rs
example/basic/client/: bun.lockb  index.ts  package.json
example/basic/server/: Cargo.toml
example/basic/server/src/: main.rs
example/cli/: create_payment_channel.sh
example/cloudflare/ai-worker-ts/: bun.lockb  package.json  wrangler.toml
example/cloudflare/ai-worker-ts/src/: index.ts
example/cloudflare/axum-worker/: Cargo.toml  wrangler.toml
example/cloudflare/axum-worker/src/: lib.rs
example/cloudflare/http-worker/: Cargo.toml  wrangler.toml
example/cloudflare/http-worker/src/: lib.rs
example/scripts/: 1_registerAsProvider.ts  2_createChannel.ts  3_close&withdraw.ts  index.ts  utils.ts
example/ts/: paymentChannelInfo.json
example/ts/scripts/: 1_registerAsProvider.ts  index.ts
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/marketplace/[id]/: page.tsx
frontend/app/provider-dashboard'/: page.tsx
frontend/components/: api-card.tsx  api-providers.tsx  call-to-action.tsx  footer.tsx  hero-section.tsx  how-it-works.tsx  navbar.tsx  why-use-pipegate.tsx
frontend/components/ui/: chart.tsx
frontend/lib/: mock-data.ts  types.ts
frontend/styles/: noise.css
specs/schemes/channel/: scheme_channel.md  scheme_channel_evm.md
specs/schemes/onetime/: scheme_onetime.md  scheme_onetime_evm.md
specs/schemes/stream/: scheme_stream.md  scheme_stream_superfluid.md
(+3 files in other folders)
