[package]
name = "pipegate"
version = "0.3.0"
edition = "2021"
description = "A payment authentication middleware with stablecoins"
license = "MIT"
homepage="https://github.com/Dhruv-2003/pipegate"
repository="https://github.com/Dhruv-2003/pipegate"
readme ="README.md"
keywords = ["blockchain", "payment", "ethereum"]
categories = ["cryptography", "network-programming", "web-programming"]
exclude=["src/main.rs","scripts"]

[dependencies]
alloy = { version = "0.6.4", features = ["full"] }
axum = "0.7.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
