[package]
name = "s3-proxy-router"
version = "0.1.0"
edition = "2021"

[dependencies]
pipegate = { path="../../../core/server"}
tokio = { version = "1.41.1", features = ["full"] }
axum = { version = "0.7.9" }
axum-macros = { version = "0.4.2" }
aws-config ={ version = "1.5.11", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.66.0"
dotenv = "0.15"
alloy ={ version = "0.8.3" , features = ["full"] }