[package]
name = "http-worker"
version = "0.1.0"
edition = "2021"
authors = [ "Dhruv-2003 <dhruvagarwal2017@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http'] }
worker-macros = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
pipegate = { path="../../../core/server"}
alloy = {version = "0.8.0", default-features = false}
serde_json = "1.0.133"
